--- a/public/css/app.css
+++ b/public/css/app.css
@@ -129,3 +129,27 @@ thead{
     width: 40px;
     margin-left: 5px;
 }
+
+
+
+
+/********************Detail participant******************************/
+.contener-profil{
+    width: 600px;
+    margin-right: auto;
+    margin-left: auto;
+}
+.liste-presentation{
+    list-style-type: none;
+    padding: 10px 0 50px 110px ;
+}
+
+.label-style{
+    font-family: 'roboto','sans-serif';
+    font-size: 29px;
+    color: #194a7b ;
+}
+.txt-style{
+    font-size: 27px;
+
+}
