--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -31,7 +31,7 @@
                 <input type="checkbox" name="_remember_me"> Remember me
             </label>
         </div>
-
+        <a href="{{ path('app_reset_password', {'token': 'x'}) }}">Mot de passe oublié ?</a><br>
 
     <button class="btn btn-lg btn-primary" type="submit">
         Sign in
