--- a/templates/main/accueil.html.twig
+++ b/templates/main/accueil.html.twig
@@ -47,13 +47,38 @@
                                 </td>
                                 <td class="tdHover"><a class="pseudoDetail" href="{{ path('detail_participant', {'id': sortie.organisateur.id}) }}">{{ sortie.organisateur.prenom }} {{ sortie.organisateur.nom }}</a></td>
 
-                                {% if sortie.participants.contains(app.user) %}
-                                <td class="intitule"><a href="{{ path('sortie_participant_desinscription', {'id': sortie.id}) }}" class="btn btn-outline-primary ">Se désister</a> <a href="{{ path('sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a></td>
-
+                                {% if sortie.organisateur.id == app.user.id %}
+                                        {% if sortie.etat.libelle == 'créée' %}
+                                            {% elseif sortie.etat.libelle == 'ouverte'%}
+                                            <td class="intitule"><a href="{{ path('sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a>
+                                                <a href="{{ path('sortie_annulation') }}" class="btn btn-outline-primary">Annuler</a> </td>
+                                                {% elseif sortie.etat.libelle == 'annulée' %}
+                                                    <td class="intitule"><a href="{{ path('sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a></td>
+                                                    {% elseif sortie.etat.libelle == 'cloturée' %}
+                                                        <td class="intitule"><a href="{{ path('sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a></td>
+                                        {% endif %}
                                 {% else %}
-                                <td class="intitule"><a href="{{ path('sortie_participant', {'id': sortie.id}) }}" class="btn btn-outline-primary ">S'inscrire</a> <a href="{{ path('sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a></td>
+                                        {% if sortie.etat.libelle == 'ouverte' %}
+                                            {% if sortie.participants.contains(app.user) %}
+                                                <td class="intitule"><a href="{{ path('sortie_participant_desinscription', {'id': sortie.id}) }}" class="btn btn-outline-primary ">Se désister</a>
+                                                    <a href="{{ path('sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a></td>
+                                                {% else %}
+                                                    <td class="intitule"><a href="{{ path('sortie_participant', {'id': sortie.id}) }}" class="btn btn-outline-primary ">S'inscrire</a>
+                                                        <a href="{{ path('sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a></td>
+                                            {% endif %}
+                                        {% endif %}
+                                    {% if sortie.etat.libelle == 'activité en cours' %}
+                                            <td class="intitule"><a href="{{ path('sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a></td>
+                                        {% endif %}
+                                        {% if sortie.etat.libelle == 'cloturée' %}
+                                            {% if sortie.participants.contains(app.user) %}
+                                                <td class="intitule"><a href="{{ path('sortie_participant_desinscription', {'id': sortie.id}) }}" class="btn btn-outline-primary ">Se désister</a>
+                                                    <a href="{{ path('sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a></td>
+                                            {% else %}
+                                                <td class="intitule"><a href="{{ path('sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a></td>
+                                            {% endif %}
                                 {% endif %}
-
+                                {% endif %}
                             </tr>
                     {% endfor %}
                 </tbody>
