modification sortie plus creation pages error

--- a/templates/main/accueil.html.twig
+++ b/templates/main/accueil.html.twig
@@ -49,9 +49,11 @@
 
                                 {% if sortie.organisateur.id == app.user.id %}
                                         {% if sortie.etat.libelle == 'créée' %}
+                                            <td class="intitule"><a href="{{ path('sortie_modifier', {'id': sortie.id}) }}" class="btn btn-outline-primary">Modifier</a></td>
                                             {% elseif sortie.etat.libelle == 'ouverte'%}
                                             <td class="intitule"><a href="{{ path('sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a>
-                                                <a href="{{ path('sortie_annulation') }}" class="btn btn-outline-primary">Annuler</a> </td>
+                                                <a href="{{ path('sortie_annulation') }}" class="btn btn-outline-primary">Annuler</a>
+                                            </td>
                                                 {% elseif sortie.etat.libelle == 'annulée' %}
                                                     <td class="intitule"><a href="{{ path('sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a></td>
                                                     {% elseif sortie.etat.libelle == 'cloturée' %}
