--- a/templates/sortie/modifier.html.twig
+++ b/templates/sortie/modifier.html.twig
@@ -5,4 +5,8 @@
 {% block body %}
     <h1>Modifier une sortie</h1>
 
+    {{ form_start(sortieForm) }}
+    {{ form_widget(sortieForm) }}
+    <button type="submit">modifier</button>
+    {{ form_end(sortieForm) }}
 {% endblock %}
