--- a/templates/sortie/annulation.html.twig
+++ b/templates/sortie/annulation.html.twig
@@ -6,9 +6,11 @@
     <h1>Annuler une sortie</h1>
 
    <div class="formAnnulation">
+       {{ form_start(sortieForm) }}
     {{ form_row(sortieForm.infosSortie) }}
  <a href="{{ path('app_accueil') }}" type="reset" class="btn btnValidation">Annuler</a>
-    <boutton type="submit" class="btn btnValidation">Enregistrer l'annulation</boutton>
+    <button type="submit" class="btn btnValidation">Enregistrer l'annulation</button>
+       {{ form_end(sortieForm) }}
    </div>
 
 
