--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -1,1 +1,14 @@
-<h1>error404</h1>
+{% extends 'base.html.twig' %}
+
+{% block title %}
+
+{% endblock %}
+{% block header %}
+
+{% endblock %}
+
+{% block body %}
+    <h1>Erreur 404</h1>
+
+
+{% endblock %}
