--- a/templates/bundles/TwigBundle/Exception/error500.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error500.html.twig
@@ -1,1 +1,14 @@
-<h1>error 500</h1>
+{% extends 'base.html.twig' %}
+
+{% block title %}
+
+{% endblock %}
+{% block header %}
+
+{% endblock %}
+
+{% block body %}
+    <h1>Erreur 500</h1>
+
+
+{% endblock %}
