--- a/templates/sortie/modifier.html.twig
+++ b/templates/sortie/modifier.html.twig
@@ -7,6 +7,6 @@
 
     {{ form_start(sortieForm) }}
     {{ form_widget(sortieForm) }}
-    <button type="submit">modifier</button>
+    <button class="btnValidation btn" type="submit">modifier</button>
     {{ form_end(sortieForm) }}
 {% endblock %}
