--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,7 @@
 
 <div class="container-header">
             <div class="logo">
-                <a href="{{ path('app_accueil') }}"><img src="{{ asset('img/MicrosoftTeams-image.png') }}" alt="logo sortir.com"></a>
+                <a href="{{ path('sortir_app_accueil') }}"><img src="{{ asset('img/MicrosoftTeams-image.png') }}" alt="logo sortir.com"></a>
             </div>
              <div>
                  {% include('inc/nav.html.twig') %}
