--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -21,7 +21,7 @@
                 <a href="{{ path('app_accueil') }}" title="Accueil">Accueil</a>
             </li>
             <li class="nav-item mr-4">
-                <a href="{{ path('participant_monProfil', {'id':app.user.id})}}" title="Mon Profil">Mon profil</a>
+                <a href="{{ path('participant_participant_monProfil', {'id':app.user.id})}}" title="Mon Profil">Mon profil</a>
             </li>
             <li class="nav-item">
                 <a href="{{ path('app_logout') }}" title="Se déconnecter">Se déconnecter</a>
