--- a/templates/main/accueil.html.twig
+++ b/templates/main/accueil.html.twig
@@ -49,36 +49,36 @@
 
                                 {% if sortie.organisateur.id == app.user.id %}
                                         {% if sortie.etat.libelle == 'créée' %}
-                                            <td class="intitule"><a href="{{ path('sortie_modifier', {'id': sortie.id}) }}" class="btn btn-outline-primary">Modifier</a>
-                                                <a  href="{{ path('sortie_publier', {'id': sortie.id}) }}" class="btn btn-outline-primary">Publier</a></td>
+                                            <td class="intitule"><a href="{{ path('sortir_sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Modifier</a>
+                                                <a  href="{{ path('sortir_sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Publier</a></td>
                                             {% elseif sortie.etat.libelle == 'ouverte'%}
-                                            <td class="intitule"><a href="{{ path('sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a>
-                                                <a href="{{ path('sortie_annulation', {'id': sortie.id}) }}" class="btn btn-outline-primary">Annuler</a>
+                                            <td class="intitule"><a href="{{ path('sortir_sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a>
+                                                <a href="{{ path('sortir_sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Annuler</a>
                                             </td>
                                                 {% elseif sortie.etat.libelle == 'annulée' %}
-                                                    <td class="intitule"><a href="{{ path('sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a></td>
+                                                    <td class="intitule"><a href="{{ path('sortir_sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a></td>
                                                     {% elseif sortie.etat.libelle == 'cloturée' %}
-                                                        <td class="intitule"><a href="{{ path('sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a></td>
+                                                        <td class="intitule"><a href="{{ path('sortir_sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a></td>
                                         {% endif %}
                                 {% else %}
                                         {% if sortie.etat.libelle == 'ouverte' %}
                                             {% if sortie.participants.contains(app.user) %}
                                                 <td class="intitule"><a href="{{ path('sortie_participant_desinscription', {'id': sortie.id}) }}" class="btn btn-outline-primary ">Se désister</a>
-                                                    <a href="{{ path('sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a></td>
+                                                    <a href="{{ path('sortir_sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a></td>
                                                 {% else %}
                                                     <td class="intitule"><a href="{{ path('sortie_participant', {'id': sortie.id}) }}" class="btn btn-outline-primary ">S'inscrire</a>
-                                                        <a href="{{ path('sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a></td>
+                                                        <a href="{{ path('sortir_sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a></td>
                                             {% endif %}
                                         {% endif %}
                                     {% if sortie.etat.libelle == 'activité en cours' %}
-                                            <td class="intitule"><a href="{{ path('sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a></td>
+                                            <td class="intitule"><a href="{{ path('sortir_sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a></td>
                                         {% endif %}
                                         {% if sortie.etat.libelle == 'cloturée' %}
                                             {% if sortie.participants.contains(app.user) %}
                                                 <td class="intitule"><a href="{{ path('sortie_participant_desinscription', {'id': sortie.id}) }}" class="btn btn-outline-primary ">Se désister</a>
-                                                    <a href="{{ path('sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a></td>
+                                                    <a href="{{ path('sortir_sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a></td>
                                             {% else %}
-                                                <td class="intitule"><a href="{{ path('sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a></td>
+                                                <td class="intitule"><a href="{{ path('sortir_sortie_afficher', {'id': sortie.id}) }}" class="btn btn-outline-primary">Afficher</a></td>
                                             {% endif %}
                                 {% endif %}
                                 {% endif %}
@@ -87,6 +87,6 @@
                 </tbody>
             </table>
         </div>
-        <a href="{{ path('sortie_creation',{'id': app.user.id})}}" class="btn btnValidation">Créer une sortie</a>
+        <a href="{{ path('sortir_sortie_creation',{'id': app.user.id})}}" class="btn btnValidation">Créer une sortie</a>
     </div>
 {% endblock %}
