--- a/templates/sortie/LieuCreation.html.twig
+++ b/templates/sortie/LieuCreation.html.twig
@@ -11,5 +11,5 @@
     <button class="btn btnValidation" type="submit">Enregistrer</button>
     {{ form_end(lieuForm) }}
 {#    <a class="btn btn-danger"onclick="history.go(-1)">Retour</a>#}
-    <a href="{{ path('sortie_creation', {'id': app.user.id}) }}" class="btn btn-danger">Retour</a>
+    <a href="{{ path('sortir_sortie_creation', {'id': app.user.id}) }}" class="btn btn-danger">Retour</a>
 {% endblock %}
