--- a/templates/sortie/creation.html.twig
+++ b/templates/sortie/creation.html.twig
@@ -14,7 +14,7 @@
     {{ form_row(sortieForm.infosSortie) }}
     <div class="btnNewLieu">
     {{ form_row(sortieForm.lieu) }}
-    <a type="button" href ="{{ path('sortie_add_Lieu')}}" class="btn btn-dark">+</a>
+    <a type="button" href ="{{ path('sortir_sortie_add_Lieu')}}" class="btn btn-dark">+</a>
     </div>
 
     <button class="btn btnValidation" type="submit" name="creer" value="creer">Enregistrer</button>
