--- a/templates/sortie/afficher.html.twig
+++ b/templates/sortie/afficher.html.twig
@@ -6,7 +6,8 @@
 
     <h1>Afficher une sortie</h1>
 
-<div id="tabMarge" class="tableaux">
+<div id="tabMarge">
+    <div class="tableaux">
     <table class="table table-striped table-bordered ">
 
         <thead>
@@ -37,7 +38,8 @@
         </tr>
         </tbody>
     </table>
-</div>
+    </div>
+
     <div class="tableaux">
         <table class="table table-striped table-bordered ">
             <thead>
@@ -70,7 +72,7 @@
             </tbody>
         </table>
     </div>
-
+</div>
     <div class="participantsInscrits">
     <h2>Liste des participants inscrits</h2>
 
