--- a/templates/participant/monProfil.html.twig
+++ b/templates/participant/monProfil.html.twig
@@ -6,7 +6,11 @@
     <h1>Mon profil</h1>
 
     {{ form_start(editForm) }}
-
+    {% if participant.photo %}
+    <img src="{{ asset('images/' ~participant.photo)}}" alt="photo de profil">
+    {% else %}
+        <img src="{{ asset('images/default.jpg.jpg')}}" alt="photo par défaut">
+    {% endif %}
 
 
     {{ form_end(editForm) }}
