--- a/templates/participant/monProfil.html.twig
+++ b/templates/participant/monProfil.html.twig
@@ -6,7 +6,9 @@
     <h1>Mon profil</h1>
 
     {{ form_start(editForm) }}
+    <div class="photo">
     {% if participant.photo %}
+        </div>
     <img src="{{ asset('images/' ~participant.photo)}}" alt="photo de profil">
     {% else %}
         <img src="{{ asset('images/default.jpg.jpg')}}" alt="photo par défaut">
