--- a/templates/participant/detail_participant.html.twig
+++ b/templates/participant/detail_participant.html.twig
@@ -11,7 +11,7 @@
     <h1>Profil de {{ participant.pseudo }}</h1>
 
 <div class="photoProfil">
-    <img src="{{ asset('images/' ~participant.photo)}}" alt="photo de profil">
+    <img class="imgProfil" src="{{ asset('images/' ~participant.photo)}}" alt="photo de profil">
 </div>
     <div class="contener-profil mt-5">
         <div class="row">
