--- a/templates/participant/monProfil.html.twig
+++ b/templates/participant/monProfil.html.twig
@@ -9,7 +9,9 @@
     <div class="photo">
     {% if participant.photo %}
         </div>
-    <img src="{{ asset('images/' ~participant.photo)}}" alt="photo de profil">
+        <div class="photoProfil">
+    <img class="imgProfil mb-3 mt-3" src="{{ asset('images/' ~participant.photo)}}" alt="photo de profil">
+        </div>
     {% else %}
         <img src="{{ asset('images/default.jpg.jpg')}}" alt="photo par défaut">
     {% endif %}
