Ajout de l'option d'ajouter une photo de profil pour l'utilisateur + une image de profil par défaut

--- a/templates/participant/monProfil.html.twig
+++ b/templates/participant/monProfil.html.twig
@@ -9,8 +9,8 @@
     <div class="photo">
     {% if participant.photo %}
         </div>
-        <div class="photoProfil">
-    <img class="imgProfil mb-3 mt-3" src="{{ asset('images/' ~participant.photo)}}" alt="photo de profil">
+        <div class="photoProfil ">
+    <img class="imgProfil border rounded-circle mb-3 mt-3" src="{{ asset('images/' ~participant.photo)}}" alt="photo de profil">
         </div>
     {% else %}
         <img src="{{ asset('images/default.jpg.jpg')}}" alt="photo par défaut">
