--- a/templates/sortie/creation.html.twig
+++ b/templates/sortie/creation.html.twig
@@ -18,8 +18,8 @@
     </div>
 <div class="btn_creation">
     <button class="btn btnValidation" type="submit" name="creer" value="creer">Enregistrer</button>
-    <button class="btn btnValidation" type="submit" name="publier" value="publier">Publier la sortie</button>
-    <a href="{{ path('sortir_app_accueil') }}" class="btn btnValidation" type="reset">Annuler</a>
+    <button class="btn btnValidation mt-4 mb-4" type="submit" name="publier" value="publier">Publier la sortie</button>
+    <a href="{{ path('sortir_app_accueil') }}" class="btn btn-danger" type="reset">Annuler</a>
 </div>
 
     {{ form_end(sortieForm) }}
