--- a/templates/sortie/creation.html.twig
+++ b/templates/sortie/creation.html.twig
@@ -26,3 +26,29 @@
 
 
 {% endblock %}
+{% block javascripts %}
+    <script>
+        window.onload = () =>{
+            let lieu = document.querySelector("#sortie_lieu");
+            lieu.addEventListener("change", function (){
+                let form = this.closest("form");
+                let data = this.name + "=" + this.value;
+
+                fetch(form.action, {
+                    method: form.getAttribute("methode"),
+                    body: data,
+                    headers:{
+                        "Content-Type": "application/x-www-form-urlencoded; charset:utf-8"
+                    }
+                })
+                .then(response => response.text())
+                .then(html =>{
+                    let content = document.createElement("html");
+                    content.innerHTML = html;
+                    let nouveauSelect = content.querySelector("#sortie_lieu");
+                    document.querySelector("#sortie_lieu").replaceWith(nouveauSelect);
+                })
+            })
+        }
+    </script>
+{% endblock %}
