--- a/templates/participant/monProfil.html.twig
+++ b/templates/participant/monProfil.html.twig
@@ -13,7 +13,9 @@
             <img class="imgProfil border rounded-circle mb-3 mt-3" src="{{ asset('images/' ~participant.photo)}}" alt="photo de profil">
         </div>
     {% else %}
+        <div class="photoProfil ">
         <img class="imgProfil border rounded-circle mb-3 mt-3" src="{{ asset('images/default.jpg.jpg')}}" alt="photo par défaut">
+        </div>
     {% endif %}
 
 
